force-app/main/default/objects/HCI_SAP__c/HCI_SAP__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>HCI SAP</label>
</CustomObject>