force-app/main/default/objects/HCI_SAP__c/fields/Allow_Push_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Allow_Push_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Push to SAP</label>
    <type>Checkbox</type>
</CustomField>