force-app/main/default/objects/HCI_SAP__c/fields/Order_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Order_Name_Prefix__c</fullName>
    <label>Order Name Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>