force-app/main/default/objects/HCI_SAP__c/fields/Quote_Legacy_Source__c.field-meta.xml
<CustomField>
    <fullName>Quote_Legacy_Source__c</fullName>
    <label>Quote Legacy Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>