force-app/main/default/objects/HCI_SAP__c/fields/Quote_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name_Prefix__c</fullName>
    <label>Quote Name Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>